syntax = "proto3";

package gameplay;

message SpinRequest {
    string userId = 1;
}

message SpinResponse {
    string spinSlotId = 1;
}